--- a/frontend/components/Topbar/Topbar.module.css
+++ b/frontend/components/Topbar/Topbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: var(--top-bar-height);
+  height: var(--topbar-height);
   width: 100%;
 }
 
